kubernetes/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: production
  labels:
    name: mongo-service
spec:
  ports:
    - name: mongo-service
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    name: mongo-service
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  namespace: production
  labels:
    name: mongo
spec:
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      name: mongo
      labels:
        name: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:3.4.9-jessie
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        ports:
        - name: mongo
          containerPort: 27017
          hostPort: 27017
        volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
        annotations:
          volume.beta.kubernetes.io/storage-class: fast
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
