kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: production
  labels:
    name: redis-service
spec:
  ports:
    - name: redis-service
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    name: redis-service
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis
  namespace: production
  labels:
    name: redis
spec:
  serviceName: redis
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis
          image: redis:4.0.1-alpine
          command:
            - redis-server
          args:
            - /etc/redis/redis.conf
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
          ports:
            - name: redis
              containerPort: 6379
              hostPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /var/lib/redis
            - name: redis-conf
              mountPath: /etc/redis
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf
            items:
              - key: redis.conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        annotations:
          volume.beta.kubernetes.io/storage-class: fast
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
