kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: production
  labels:
    app: web
    name: web-service
spec:
  type: NodePort
  selector:
    name: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
